Bug 373910 - kgpg crash when changing key trust
Summary: kgpg crash when changing key trust
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords: drkonqi
: 375363 376367 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-12-19 20:04 UTC by Jaak Ristioja
Modified: 2017-06-28 16:52 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 17.04.3
Sentry Crash Report:


Attachments
proposed fix (864 bytes, patch)
2017-06-15 16:39 UTC, Rolf Eike Beer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jaak Ristioja 2016-12-19 20:04:09 UTC
Application: kgpg (16.12.0)

Qt Version: 5.7.1
Frameworks Version: 5.29.0
Operating System: Linux 4.8.15-hardened x86_64
Distribution: "NAME=Gentoo"

-- Information about the crash:
- What I was doing when the application crashed:
1. Opened key properties dialog for a key imported earlier
2. Changed owner trust to "Ultimate"
3. Clicked the "OK" button

- Unusual behavior I noticed:
1. The mouse cursor changed to some spinning thing
2. Nothing happened for a while (key properties dialog was still displayed on screen)
3. Crash

Gentoo Linux, x86_64, hardened-sources-4.8.15. These kernel messages are probably related:

[13671.860748] PAX: execution attempt in: (null), 00000000-00000000 00000000
[13671.860750] PAX: terminating task: /usr/bin/kgpg(kgpg):13799, uid/euid: 1001/1001, PC: 0000000000000201, SP: 000003e22099c3d8
[13671.860751] PAX: bytes at PC: ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? ?? 
[13671.860764] PAX: bytes at SP-8: 000003e22099c4d0 000003b3ac001d2e 0000001f3907b730 3dd6033e0ed41f00 000003b3aa9e5bd8 000003b3aa9e5bd8 0000000000000000 000003b3ac002b2c 000003e22099c4d0 3dd6033e0ed41f00 000003e22099c770 
[13671.860821] grsec: denied resource overstep by requesting 4096 for RLIMIT_CORE against limit 0 for /usr/bin/kgpg[kgpg:13799] uid/euid:1001/1001 gid/egid:100/100, parent /sbin/init[init:1] uid/euid:0/0 gid/egid:0/0

The crash can be reproduced every time.

-- Backtrace:
Application: KGpg (kgpg), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x3a3ab4d4780 (LWP 13855))]

Thread 3 (Thread 0x3a3997eb700 (LWP 13865)):
#0  0x000003a3bf8032ec in g_mutex_lock (mutex=mutex@entry=0x3a394000990) at /var/tmp/portage/dev-libs/glib-2.48.2/work/glib-2.48.2/glib/gthread-posix.c:1335
#1  0x000003a3bf7aee26 in g_main_context_iterate (context=context@entry=0x3a394000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /var/tmp/portage/dev-libs/glib-2.48.2/work/glib-2.48.2/glib/gmain.c:3844
#2  0x000003a3bf7aefcb in g_main_context_iteration (context=0x3a394000990, may_block=may_block@entry=1) at /var/tmp/portage/dev-libs/glib-2.48.2/work/glib-2.48.2/glib/gmain.c:3901
#3  0x000003a3c644894b in QEventDispatcherGlib::processEvents (this=0x3a3940008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x000003a3c63e1a1a in QEventLoop::exec (this=this@entry=0x3a3997eae30, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#5  0x000003a3c61e7d93 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:507
#6  0x000003a3c61ee9bc in QThreadPrivate::start (arg=0x4cdd364910) at thread/qthread_unix.cpp:368
#7  0x000003a3c204464c in start_thread (arg=0x3a3997eb700) at pthread_create.c:334
#8  0x000003a3c583483d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x3a3a1629700 (LWP 13860)):
#0  0x000003a3c582aa4d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x000003a3bf7aee64 in g_main_context_poll (priority=2147483647, n_fds=1, fds=0x3a39c003020, timeout=<optimized out>, context=0x3a39c000990) at /var/tmp/portage/dev-libs/glib-2.48.2/work/glib-2.48.2/glib/gmain.c:4135
#2  g_main_context_iterate (context=context@entry=0x3a39c000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /var/tmp/portage/dev-libs/glib-2.48.2/work/glib-2.48.2/glib/gmain.c:3835
#3  0x000003a3bf7aefcb in g_main_context_iteration (context=0x3a39c000990, may_block=may_block@entry=1) at /var/tmp/portage/dev-libs/glib-2.48.2/work/glib-2.48.2/glib/gmain.c:3901
#4  0x000003a3c644894b in QEventDispatcherGlib::processEvents (this=0x3a39c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#5  0x000003a3c63e1a1a in QEventLoop::exec (this=this@entry=0x3a3a1628df0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#6  0x000003a3c61e7d93 in QThread::exec (this=this@entry=0x3a3cb32bb20 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread.cpp:507
#7  0x000003a3cb29bdb3 in QDBusConnectionManager::run (this=0x3a3cb32bb20 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:178
#8  0x000003a3c61ee9bc in QThreadPrivate::start (arg=0x3a3cb32bb20 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:368
#9  0x000003a3c204464c in start_thread (arg=0x3a3a1629700) at pthread_create.c:334
#10 0x000003a3c583483d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x3a3ab4d4780 (LWP 13855)):
[KCrash Handler]
#6  operator== (s1=..., s2=...) at tools/qstring.cpp:2746
#7  0x000003a3c7101ae6 in QLabel::setText (this=0x4cdd53da30, text=...) at widgets/qlabel.cpp:297
#8  0x0000004cdaa05756 in KgpgKeyInfo::displayKey (this=this@entry=0x4cdd53ef70) at /var/tmp/portage/kde-apps/kgpg-16.12.0/work/kgpg-16.12.0/keyinfodialog.cpp:184
#9  0x0000004cdaa07ce1 in KgpgKeyInfo::reloadNode (this=this@entry=0x4cdd53ef70) at /var/tmp/portage/kde-apps/kgpg-16.12.0/work/kgpg-16.12.0/keyinfodialog.cpp:172
#10 0x0000004cdaa07f40 in KgpgKeyInfo::slotApplied (this=0x4cdd53ef70, result=<optimized out>) at /var/tmp/portage/kde-apps/kgpg-16.12.0/work/kgpg-16.12.0/keyinfodialog.cpp:371
#11 0x000003a3c6418410 in QtPrivate::QSlotObjectBase::call (a=0x3b43da19e30, r=0x4cdd53ef70, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobject_impl.h:101
#12 QMetaObject::activate (sender=sender@entry=0x4cdd53c0d0, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x3b43da19e30) at kernel/qobject.cpp:3723
#13 0x000003a3c641899e in QMetaObject::activate (sender=sender@entry=0x4cdd53c0d0, m=m@entry=0x4cdac8dda0 <KGpgChangeKey::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x3b43da19e30) at kernel/qobject.cpp:3602
#14 0x0000004cdaa3292d in KGpgChangeKey::done (this=this@entry=0x4cdd53c0d0, _t1=0) at /var/tmp/portage/kde-apps/kgpg-16.12.0/work/kgpg-16.12.0_build/moc_kgpgchangekey.cpp:149
#15 0x0000004cdaa16da5 in KGpgChangeKey::nextStep (this=0x4cdd53c0d0, result=0) at /var/tmp/portage/kde-apps/kgpg-16.12.0/work/kgpg-16.12.0/kgpgchangekey.cpp:144
#16 0x000003a3c6418410 in QtPrivate::QSlotObjectBase::call (a=0x3b43da1a030, r=0x4cdd53c0d0, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobject_impl.h:101
#17 QMetaObject::activate (sender=0x4cdd603870, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x3b43da1a030) at kernel/qobject.cpp:3723
#18 0x000003a3c641899e in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x4cdac8d8e0 <KGpgTransaction::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x3b43da1a030) at kernel/qobject.cpp:3602
#19 0x0000004cdaa32e2d in KGpgTransaction::done (this=<optimized out>, _t1=0) at /var/tmp/portage/kde-apps/kgpg-16.12.0/work/kgpg-16.12.0_build/moc_kgpgtransaction.cpp:154
#20 0x000003a3c6418410 in QtPrivate::QSlotObjectBase::call (a=0x3b43da1a120, r=0x4cdd5d21e0, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobject_impl.h:101
#21 QMetaObject::activate (sender=0x4cdd5ca1b0, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at kernel/qobject.cpp:3723
#22 0x000003a3c6418410 in QtPrivate::QSlotObjectBase::call (a=0x3b43da1a290, r=0x4cdd5ca1b0, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobject_impl.h:101
#23 QMetaObject::activate (sender=sender@entry=0x4cdd5ca1b0, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x3b43da1a290) at kernel/qobject.cpp:3723
#24 0x000003a3c641899e in QMetaObject::activate (sender=sender@entry=0x4cdd5ca1b0, m=m@entry=0x3a3c6660d40 <QProcess::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x3b43da1a290) at kernel/qobject.cpp:3602
#25 0x000003a3c631146e in QProcess::finished (this=this@entry=0x4cdd5ca1b0, _t1=9, _t2=QProcess::CrashExit) at .moc/moc_qprocess.cpp:333
#26 0x000003a3c6319443 in QProcessPrivate::_q_processDied (this=this@entry=0x4cdd602da0) at io/qprocess.cpp:1179
#27 0x000003a3c637534c in QProcessPrivate::waitForFinished (this=this@entry=0x4cdd602da0, msecs=msecs@entry=30000) at io/qprocess_unix.cpp:895
#28 0x000003a3c631298e in QProcess::waitForFinished (this=this@entry=0x4cdd5ca1b0, msecs=msecs@entry=30000) at io/qprocess.cpp:1922
#29 0x000003a3c631323c in QProcess::~QProcess (this=0x4cdd5ca1b0, __in_chrg=<optimized out>) at io/qprocess.cpp:1261
#30 0x0000004cda9f9312 in GPGProc::~GPGProc (this=0x4cdd5ca1b0, __in_chrg=<optimized out>) at /var/tmp/portage/kde-apps/kgpg-16.12.0/work/kgpg-16.12.0/gpgproc.cpp:177
#31 GPGProc::~GPGProc (this=0x4cdd5ca1b0, __in_chrg=<optimized out>) at /var/tmp/portage/kde-apps/kgpg-16.12.0/work/kgpg-16.12.0/gpgproc.cpp:179
#32 0x0000004cda99e598 in KGpgTransactionPrivate::~KGpgTransactionPrivate (this=0x4cdd5d21e0, __in_chrg=<optimized out>) at /var/tmp/portage/kde-apps/kgpg-16.12.0/work/kgpg-16.12.0/transactions/kgpgtransactionprivate.cpp:55
#33 0x0000004cda99e65c in KGpgTransactionPrivate::~KGpgTransactionPrivate (this=0x4cdd5d21e0, __in_chrg=<optimized out>) at /var/tmp/portage/kde-apps/kgpg-16.12.0/work/kgpg-16.12.0/transactions/kgpgtransactionprivate.cpp:56
#34 0x0000004cda999f74 in KGpgTransaction::~KGpgTransaction (this=0x4cdd603870, __in_chrg=<optimized out>) at /var/tmp/portage/kde-apps/kgpg-16.12.0/work/kgpg-16.12.0/transactions/kgpgtransaction.cpp:40
#35 0x0000004cda9a259a in KGpgChangeTrust::~KGpgChangeTrust (this=0x4cdd603870, __in_chrg=<optimized out>) at /var/tmp/portage/kde-apps/kgpg-16.12.0/work/kgpg-16.12.0/transactions/kgpgchangetrust.cpp:22
#36 KGpgChangeTrust::~KGpgChangeTrust (this=0x4cdd603870, __in_chrg=<optimized out>) at /var/tmp/portage/kde-apps/kgpg-16.12.0/work/kgpg-16.12.0/transactions/kgpgchangetrust.cpp:24
#37 0x000003a3c641f4d1 in QObjectPrivate::deleteChildren (this=this@entry=0x4cdd53d050) at kernel/qobject.cpp:1970
#38 0x000003a3c6ff2d26 in QWidget::~QWidget (this=0x4cdd53ef70, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1694
#39 0x0000004cdaa0562c in KgpgKeyInfo::~KgpgKeyInfo (this=0x4cdd53ef70, __in_chrg=<optimized out>) at /var/tmp/portage/kde-apps/kgpg-16.12.0/work/kgpg-16.12.0/keyinfodialog.cpp:161
#40 0x0000004cda9d99a0 in KeysManager::keyproperties (this=0x4cdd1e3d40) at /var/tmp/portage/kde-apps/kgpg-16.12.0/work/kgpg-16.12.0/keysmanager.cpp:1696
#41 0x000003a3c6418410 in QtPrivate::QSlotObjectBase::call (a=0x3b43da1a8a0, r=0x4cdd1e3d40, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobject_impl.h:101
#42 QMetaObject::activate (sender=sender@entry=0x4cdd30c040, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x3b43da1a8a0) at kernel/qobject.cpp:3723
#43 0x000003a3c641899e in QMetaObject::activate (sender=sender@entry=0x4cdd30c040, m=m@entry=0x3a3c751a760 <QAction::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x3b43da1a8a0) at kernel/qobject.cpp:3602
#44 0x000003a3c6f9b9f1 in QAction::triggered (this=this@entry=0x4cdd30c040, _t1=false) at .moc/moc_qaction.cpp:372
#45 0x000003a3c6f9efd0 in QAction::activate (this=this@entry=0x4cdd30c040, event=event@entry=QAction::Trigger) at kernel/qaction.cpp:1170
#46 0x000003a3c71417ea in QMenuPrivate::activateCausedStack (this=this@entry=0x4cdd36b270, causedStack=..., action=action@entry=0x4cdd30c040, action_e=action_e@entry=QAction::Trigger, self=self@entry=true) at widgets/qmenu.cpp:1140
#47 0x000003a3c7149c05 in QMenuPrivate::activateAction (this=this@entry=0x4cdd36b270, action=action@entry=0x4cdd30c040, action_e=action_e@entry=QAction::Trigger, self=self@entry=true) at widgets/qmenu.cpp:1217
#48 0x000003a3c714aaa0 in QMenu::mouseReleaseEvent (this=<optimized out>, e=0x3b43da1af10) at widgets/qmenu.cpp:2680
#49 0x000003a3c6ff76f8 in QWidget::event (this=this@entry=0x4cdd30cbf0, event=event@entry=0x3b43da1af10) at kernel/qwidget.cpp:9161
#50 0x000003a3c714cdf3 in QMenu::event (this=0x4cdd30cbf0, e=0x3b43da1af10) at widgets/qmenu.cpp:2799
#51 0x000003a3c6fa432c in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x4cdd30cbf0, e=0x3b43da1af10) at kernel/qapplication.cpp:3799
#52 0x000003a3c6facec4 in QApplication::notify (this=<optimized out>, receiver=0x4cdd30cbf0, e=0x3b43da1af10) at kernel/qapplication.cpp:3273
#53 0x000003a3c63e3a2a in QCoreApplication::notifyInternal2 (receiver=receiver@entry=0x4cdd30cbf0, event=event@entry=0x3b43da1af10) at kernel/qcoreapplication.cpp:988
#54 0x000003a3c6fabbef in QCoreApplication::sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#55 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x4cdd30cbf0, event=event@entry=0x3b43da1af10, alienWidget=0x0, alienWidget@entry=0x4cdd30cbf0, nativeWidget=0x4cdd30cbf0, buttonDown=buttonDown@entry=0x3a3c75455a0 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:2771
#56 0x000003a3c70173c6 in QWidgetWindow::handleMouseEvent (this=this@entry=0x4cdd50ebc0, event=event@entry=0x3b43da1b350) at kernel/qwidgetwindow.cpp:511
#57 0x000003a3c7019a33 in QWidgetWindow::event (this=0x4cdd50ebc0, event=0x3b43da1b350) at kernel/qwidgetwindow.cpp:239
#58 0x000003a3c6fa432c in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x4cdd50ebc0, e=0x3b43da1b350) at kernel/qapplication.cpp:3799
#59 0x000003a3c6fac63e in QApplication::notify (this=0x3b43da1ca80, receiver=0x4cdd50ebc0, e=0x3b43da1b350) at kernel/qapplication.cpp:3556
#60 0x000003a3c63e3a2a in QCoreApplication::notifyInternal2 (receiver=receiver@entry=0x4cdd50ebc0, event=event@entry=0x3b43da1b350) at kernel/qcoreapplication.cpp:988
#61 0x000003a3c69d7a3d in QCoreApplication::sendSpontaneousEvent (event=0x3b43da1b350, receiver=0x4cdd50ebc0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#62 QGuiApplicationPrivate::processMouseEvent (e=0x4cdd523370) at kernel/qguiapplication.cpp:1903
#63 0x000003a3c69d9a25 in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x4cdd523370) at kernel/qguiapplication.cpp:1687
#64 0x000003a3c69b0cfb in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:659
#65 0x000003a3ab232bdf in userEventSourceDispatch (source=<optimized out>) at eventdispatchers/qeventdispatcher_glib.cpp:76
#66 0x000003a3bf7aec67 in g_main_dispatch (context=0x3a3a40016f0) at /var/tmp/portage/dev-libs/glib-2.48.2/work/glib-2.48.2/glib/gmain.c:3154
#67 g_main_context_dispatch (context=context@entry=0x3a3a40016f0) at /var/tmp/portage/dev-libs/glib-2.48.2/work/glib-2.48.2/glib/gmain.c:3769
#68 0x000003a3bf7aeec8 in g_main_context_iterate (context=context@entry=0x3a3a40016f0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /var/tmp/portage/dev-libs/glib-2.48.2/work/glib-2.48.2/glib/gmain.c:3840
#69 0x000003a3bf7aefcb in g_main_context_iteration (context=0x3a3a40016f0, may_block=may_block@entry=1) at /var/tmp/portage/dev-libs/glib-2.48.2/work/glib-2.48.2/glib/gmain.c:3901
#70 0x000003a3c644892e in QEventDispatcherGlib::processEvents (this=0x4cdce81ea0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#71 0x000003a3c63e1a1a in QEventLoop::exec (this=this@entry=0x3b43da1b740, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#72 0x000003a3c71473dc in QMenu::exec (this=<optimized out>, p=..., action=action@entry=0x0) at widgets/qmenu.cpp:2447
#73 0x0000004cda9da55d in KeysManager::slotMenu (this=0x4cdd1e3d40, pos=...) at /var/tmp/portage/kde-apps/kgpg-16.12.0/work/kgpg-16.12.0/keysmanager.cpp:1318
#74 0x000003a3c6418410 in QtPrivate::QSlotObjectBase::call (a=0x3b43da1b940, r=0x4cdd1e3d40, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobject_impl.h:101
#75 QMetaObject::activate (sender=sender@entry=0x4cdd2558b0, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0x3b43da1b940) at kernel/qobject.cpp:3723
#76 0x000003a3c641899e in QMetaObject::activate (sender=sender@entry=0x4cdd2558b0, m=m@entry=0x3a3c751c540 <QWidget::staticMetaObject>, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0x3b43da1b940) at kernel/qobject.cpp:3602
#77 0x000003a3c6fd98a4 in QWidget::customContextMenuRequested (this=this@entry=0x4cdd2558b0, _t1=...) at .moc/moc_qwidget.cpp:656
#78 0x000003a3c6ff83b1 in QWidget::event (this=this@entry=0x4cdd2558b0, event=event@entry=0x3b43da1bf40) at kernel/qwidget.cpp:8963
#79 0x000003a3c70fbfed in QFrame::event (this=0x4cdd2558b0, e=0x3b43da1bf40) at widgets/qframe.cpp:550
#80 0x000003a3c7255923 in QAbstractItemView::viewportEvent (this=this@entry=0x4cdd2558b0, event=event@entry=0x3b43da1bf40) at itemviews/qabstractitemview.cpp:1747
#81 0x000003a3c729e33b in QTreeView::viewportEvent (this=0x4cdd2558b0, event=0x3b43da1bf40) at itemviews/qtreeview.cpp:1320
#82 0x000003a3c63e3714 in QCoreApplicationPrivate::sendThroughObjectEventFilters (receiver=receiver@entry=0x4cdd2a4a60, event=event@entry=0x3b43da1bf40) at kernel/qcoreapplication.cpp:1099
#83 0x000003a3c6fa42f4 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x4cdd2a4a60, e=0x3b43da1bf40) at kernel/qapplication.cpp:3795
#84 0x000003a3c6fadd92 in QApplication::notify (this=<optimized out>, receiver=0x4cdd2a4a60, e=0x3b43da1bf40) at kernel/qapplication.cpp:3417
#85 0x000003a3c63e3a2a in QCoreApplication::notifyInternal2 (receiver=receiver@entry=0x4cdd2a4a60, event=event@entry=0x3b43da1bf40) at kernel/qcoreapplication.cpp:988
#86 0x000003a3c701710c in QCoreApplication::sendSpontaneousEvent (event=0x3b43da1bf40, receiver=0x4cdd2a4a60) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#87 QWidgetWindow::handleMouseEvent (this=this@entry=0x4cdd2da140, event=event@entry=0x3b43da1c380) at kernel/qwidgetwindow.cpp:624
#88 0x000003a3c7019a33 in QWidgetWindow::event (this=0x4cdd2da140, event=0x3b43da1c380) at kernel/qwidgetwindow.cpp:239
#89 0x000003a3c6fa432c in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x4cdd2da140, e=0x3b43da1c380) at kernel/qapplication.cpp:3799
#90 0x000003a3c6fac63e in QApplication::notify (this=0x3b43da1ca80, receiver=0x4cdd2da140, e=0x3b43da1c380) at kernel/qapplication.cpp:3556
#91 0x000003a3c63e3a2a in QCoreApplication::notifyInternal2 (receiver=receiver@entry=0x4cdd2da140, event=event@entry=0x3b43da1c380) at kernel/qcoreapplication.cpp:988
#92 0x000003a3c69d7a3d in QCoreApplication::sendSpontaneousEvent (event=0x3b43da1c380, receiver=0x4cdd2da140) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#93 QGuiApplicationPrivate::processMouseEvent (e=0x4cdd3732b0) at kernel/qguiapplication.cpp:1903
#94 0x000003a3c69d9a25 in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x4cdd3732b0) at kernel/qguiapplication.cpp:1687
#95 0x000003a3c69b0cfb in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:659
#96 0x000003a3ab232bdf in userEventSourceDispatch (source=<optimized out>) at eventdispatchers/qeventdispatcher_glib.cpp:76
#97 0x000003a3bf7aec67 in g_main_dispatch (context=0x3a3a40016f0) at /var/tmp/portage/dev-libs/glib-2.48.2/work/glib-2.48.2/glib/gmain.c:3154
#98 g_main_context_dispatch (context=context@entry=0x3a3a40016f0) at /var/tmp/portage/dev-libs/glib-2.48.2/work/glib-2.48.2/glib/gmain.c:3769
#99 0x000003a3bf7aeec8 in g_main_context_iterate (context=context@entry=0x3a3a40016f0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /var/tmp/portage/dev-libs/glib-2.48.2/work/glib-2.48.2/glib/gmain.c:3840
#100 0x000003a3bf7aefcb in g_main_context_iteration (context=0x3a3a40016f0, may_block=may_block@entry=1) at /var/tmp/portage/dev-libs/glib-2.48.2/work/glib-2.48.2/glib/gmain.c:3901
#101 0x000003a3c644892e in QEventDispatcherGlib::processEvents (this=0x4cdce81ea0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#102 0x000003a3c63e1a1a in QEventLoop::exec (this=this@entry=0x3b43da1c770, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#103 0x000003a3c63eb92b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1261
#104 0x0000004cda96a9d5 in main (argc=1, argv=<optimized out>) at /var/tmp/portage/kde-apps/kgpg-16.12.0/work/kgpg-16.12.0/main.cpp:84

Reported using DrKonqi
Comment 1 Rolf Eike Beer 2017-02-11 20:31:32 UTC
*** Bug 375363 has been marked as a duplicate of this bug. ***
Comment 2 Rolf Eike Beer 2017-02-11 20:31:48 UTC
*** Bug 376367 has been marked as a duplicate of this bug. ***
Comment 3 Gábor Katona 2017-02-14 16:53:16 UTC
Kgpg 16.12.2 also has this problem on openSUSE Tumbleweed (Qt: 5.7.1, frameworks: 5.30.0). 

The crash only occurs if setting Ultimate trust level. Any other level can be set.
Comment 4 Dietmar 2017-04-13 04:15:37 UTC
the bug is still present in openSuse Tumbleweed 16.12.3-1.1
Comment 5 Ákos Szederjei 2017-06-13 15:38:28 UTC
I confirm the bug on KaOS (KDE Frameworks 5.35.0, Qt 5.9.0 (built against 5.9.0), KGPG 17.04.2).
Comment 6 Ákos Szederjei 2017-06-13 15:38:53 UTC
I confirm the bug on KaOS (KDE Frameworks 5.35.0, Qt 5.9.0 (built against 5.9.0), KGPG 17.04.2).
Comment 7 Rolf Eike Beer 2017-06-15 16:39:37 UTC
Created attachment 106116 [details]
proposed fix
Comment 8 Rolf Eike Beer 2017-06-15 16:40:09 UTC
It tries to update an object that already is in destruction.

Can someone please try the patch and report back?
Comment 9 Rolf Eike Beer 2017-06-28 16:52:44 UTC
Git commit 55e53874dcaf9b677b2ae6b5b859bb22f34f77f3 by Rolf Eike Beer.
Committed on 28/06/2017 at 16:52.
Pushed by dakon into branch 'Applications/17.04'.

prevent updates to already deleted dialog
FIXED-IN:17.04.3

M  +8    -2    keyinfodialog.cpp

https://commits.kde.org/kgpg/55e53874dcaf9b677b2ae6b5b859bb22f34f77f3