prevent updates to already deleted dialog

BUG:373910
FIXED-IN:17.04.3